
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2022 OCT 21d
  * in model/fluid/_Favre-Reynolds_plasma/fluid.c
    - in find_Kstar_interface(), fixed a bug: the turbulence contribution to kappa was not included
  

2022 OCT 21c
  * in model/fluid/_Favre-Reynolds_plasma
    - modified fluid.c, fluid.hh, fluid_source.c to add heat addition Qadd and Fbody forces


2022 OCT 21b
  * in model/chem
    - added _C2H4_Air_3s_0r
  * in model/fluid/_Favre-Reynolds_Tv
    - modified fluid.c, fluid.hh, fluid_source.c to add heat addition Qadd and Fbody forces
  * in model/share/fluid_share.c
    - in find_Sheatforces(), fixed a bug that was introduced in 22oct20b: the body forces and heat
      addition should not be multiplied by Omega
      

2022 OCT 21a
  * in model/chem/_C2H4_Air_Plasma_36s/chem.c
    - added COMBUSTIONMODEL_ZETTERVALL2017B
  * in model/chem/_C2H4_Air_Plasma_36s/
    - added zettervall2017b.c
  

2022 OCT 20b
  * in model/fluid/_Favre-Reynolds/fluid_source.c, model/fluid/_Navier-Stokes/fluid_source.c,
    model/fluid/_Navier-Stokes_perfect/fluid_source.c, model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Sstar(), added call to find_Sheatforces() and modified function accordingly
  * in model/share/fluid_share.c
    - added function find_Sheatforces()
    - in read_model_fluid_actions_Fbody_Qadd(), added (*np)[_ai(gl,i,j,k)].bs->QADD=TRUE
      and (*np)[_ai(gl,i,j,k)].bs->FBODY=TRUE; for all nodes where the body forces and
      heat added is initialized
  * in src/common.c
    - in create_node(), added np->bs->FBODY=FALSE; and np->bs->QADD=FALSE;
  * in src/common.h
    - in npbs_t, added bool FBODY,QADD
    

2022 OCT 20a
  * moved model/chem/_C2H4_Air_Plasma_30s/ to model/chem/_C2H4_Air_Plasma_36s/