@@ -62,7 +62,7 @@ void find_Ms ( double TyoverTx, double gamma, double *Ms ) {
 int main ( int argc, char **argv ) {
   bool VALIDOPTIONS=TRUE;
   double tmp, Ms, U0, P0, M0, T0, H1, W0, gamma, Rgas, Pdyn, U, P, T, H, W, M,
-         mdot, altitude, PyoverPx, TyoverTx, Te, cp, Pstag, Pstag0, Wold, Mold, phi, delta;
+         mdot, altitude, PyoverPx, TyoverTx, Te, cp, Tstag, Pstag, Tstag0, Pstag0, Wold, Mold, phi, delta;
   long numshock,cnt;
   char *options;
   int RET;
@@ -109,6 +109,7 @@ int main ( int argc, char **argv ) {
   PyoverPx=2.0*gamma/(gamma+1.0)*Ms*Ms-(gamma-1.0)/(gamma+1.0);
   M0=U0/sqrt(gamma*Rgas*T0);
   Pstag0=P0*pow(1.0+(gamma-1.0)/2.0*M0*M0,gamma/(gamma-1.0));
+  Tstag0=T0*(1.0+(gamma-1.0)/2.0*M0*M0);
 
   mdot=W0*U0*P0/T0/Rgas;
   fprintf ( stdout,
@@ -125,8 +126,9 @@ int main ( int argc, char **argv ) {
               "T0      : %E K\n"
               "U0      : %E m/s\n"
               "M0      : %E\n"
+              "Tstag0  : %E\n"
               "Pstag0  : %E Pa\n",
-             W0, P0, T0, U0, M0, Pstag0 );
+             W0, P0, T0, U0, M0, Tstag0,Pstag0 );
   M=M0;
   W=W0;
   for (cnt=1; cnt<=numshock; cnt++){
@@ -140,6 +142,7 @@ int main ( int argc, char **argv ) {
     U=sqrt((H-cp*T)*2.0);
     M=U/sqrt(gamma*Rgas*T);
     Pstag=P*pow(1.0+(gamma-1.0)/2.0*M*M,gamma/(gamma-1.0));
+    Tstag=T*(1.0+(gamma-1.0)/2.0*M*M);
     // mass conservation yields flow height W
     W = W0 * ( P0 / T0 * U0 ) / ( P / T * U );
     // find shock angle
@@ -153,9 +156,10 @@ int main ( int argc, char **argv ) {
               "U%ld      : %E m/s\n"
               "M%ld      : %E\n"
               "Pstag%ld  : %E Pa\n"
+              "Tstag%ld  : %E K\n"
               "phi%ld%ld   : %E deg\n"
               "delta%ld%ld : %E deg\n",
-             cnt,W, cnt,P, cnt,T, cnt,U, cnt,M, cnt,Pstag, cnt-1,cnt,phi/pi*180.0, cnt-1,cnt,delta/pi*180.0 );
+             cnt,W, cnt,P, cnt,T, cnt,U, cnt,M, cnt,Pstag, cnt,Tstag, cnt-1,cnt,phi/pi*180.0, cnt-1,cnt,delta/pi*180.0 );
   }
 
   return ( EXIT_SUCCESS );
